--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,3 +17,37 @@ spring:
   profiles: prod
 server:
   port: 8083
+---
+spring:
+  datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
+    #   数据源其他配置
+    druid:
+      username: zhanghd
+      password: 123456
+      url: jdbc:mysql://192.168.107.181:3306/web?charset=utf8
+      driver-class-name: com.mysql.jdbc.Driver
+      exception-sorter: com.mysql.jdbc.Driver #当数据库抛出不可恢复的异常时抛弃连接
+      max-open-prepared-statements: 1 #要启用PSCache必须配置大于0，当大于0时poolPreparedStatements自动触发修改为true
+      initial-size: 5 #初始化时建立物理连接的个数
+      max-active: 20 #最大连接池数量
+      maxWait: 60000  #获取连接时最大等待时间
+      timeBetweenEvictionRunsMillis: 60000  #有两个含义：  1) Destroy线程会检测连接的间隔时间 2) testWhileIdle的判断依据，详细看testWhileIdle属性的说明
+      minEvictableIdleTimeMillis: 300000
+      validationQuery: SELECT 1 FROM login #用来检测是否时一个有效连接，要求时一个查询语句，如果validationQuery为null，testOnBrrow、testOnReturn、testWwhileldle都不会起作用
+      testWhileIdle: true #建议配置为true，不影响性能且保证安全性。申请连接的时候检测，如果空闲时间大于 timeBetweenEvictionRunsMillis，执行validationQuery检测连接是否有效。
+      testOnBorrow: false #申请连接时执行validationQuery检测连接是否有效，做了这个配置会降低性能。
+      testOnReturn: false #归还连接时执行validationQuery检测连接是否有效，做了这个配置会降低性能
+      poolPreparedStatements: true  #是否缓存preparedStatement，也就是PSCache。
+      #   配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
+      filters: stat,wall  #属性类型是字符串，通过别名的方式配置扩展插件， 监控统计用的filter:stat ，日志用的filter:log4j ，防御sql注入的filter:wall
+      maxPoolPreparedStatementPerConnectionSize: 20
+      useGlobalDataSourceStat: true
+      stat-view-servlet:
+        login-username: admin
+        login-password: admin
+      filter:
+        stat:
+          slow-sql-millis: 500
+          merge-sql: true
+
